@@ -15,17 +15,24 @@ import uk.gov.di.authentication.shared.entity.AuthSessionItem;
 import uk.gov.di.authentication.shared.entity.CountType;
 import uk.gov.di.authentication.shared.entity.ErrorResponse;
 import uk.gov.di.authentication.shared.entity.JourneyType;
+import uk.gov.di.authentication.shared.entity.Result;
 import uk.gov.di.authentication.shared.entity.UserProfile;
 import uk.gov.di.authentication.shared.helpers.ClientSubjectHelper;
 import uk.gov.di.authentication.shared.helpers.SaltHelper;
 import uk.gov.di.authentication.shared.services.AuditService;
 import uk.gov.di.authentication.shared.services.AuthSessionService;
-import uk.gov.di.authentication.shared.services.AuthenticationAttemptsService;
 import uk.gov.di.authentication.shared.services.AuthenticationService;
 import uk.gov.di.authentication.shared.services.CloudwatchMetricsService;
 import uk.gov.di.authentication.shared.services.ConfigurationService;
 import uk.gov.di.authentication.shared.state.UserContext;
+import uk.gov.di.authentication.userpermissions.PermissionDecisionManager;
+import uk.gov.di.authentication.userpermissions.UserActionsManager;
+import uk.gov.di.authentication.userpermissions.entity.Decision;
+import uk.gov.di.authentication.userpermissions.entity.ForbiddenReason;
+import uk.gov.di.authentication.userpermissions.entity.TrackingError;
+import uk.gov.di.authentication.userpermissions.entity.UserPermissionContext;
 
+import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -36,7 +43,6 @@ import java.util.stream.Stream;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.atLeastOnce;
 import static org.mockito.Mockito.mock;
@@ -62,11 +68,12 @@ class CheckReAuthUserHandlerTest {
     private final AuditService auditService = mock(AuditService.class);
     private final Context context = mock(Context.class);
     private final ConfigurationService configurationService = mock(ConfigurationService.class);
-    private final AuthenticationAttemptsService authenticationAttemptsService =
-            mock(AuthenticationAttemptsService.class);
     private final CloudwatchMetricsService cloudwatchMetricsService =
             mock(CloudwatchMetricsService.class);
     private final AuthSessionService authSessionService = mock(AuthSessionService.class);
+    private final UserActionsManager userActionsManager = mock(UserActionsManager.class);
+    private final PermissionDecisionManager permissionDecisionManager =
+            mock(PermissionDecisionManager.class);
 
     private static final String CLIENT_ID = "test-client-id";
     private static final String EMAIL_USED_TO_SIGN_IN = "joe.bloggs@digital.cabinet-office.gov.uk";
@@ -143,6 +150,12 @@ class CheckReAuthUserHandlerTest {
         when(configurationService.getCodeMaxRetries()).thenReturn(MAX_RETRIES);
         when(configurationService.supportReauthSignoutEnabled()).thenReturn(true);
 
+        when(permissionDecisionManager.canReceiveEmailAddress(any(), any()))
+                .thenReturn(Result.success(new Decision.Permitted(0)));
+
+        when(userActionsManager.incorrectEmailAddressReceived(any(), any()))
+                .thenReturn(Result.success(null));
+
         expectedRpPairwiseSub =
                 ClientSubjectHelper.getSubject(USER_PROFILE, authSession, authenticationService)
                         .getValue();
@@ -152,16 +165,16 @@ class CheckReAuthUserHandlerTest {
                         configurationService,
                         authenticationService,
                         auditService,
-                        authenticationAttemptsService,
                         cloudwatchMetricsService,
-                        authSessionService);
+                        authSessionService,
+                        userActionsManager,
+                        permissionDecisionManager);
     }
 
     @Test
     void shouldReturn200ForSuccessfulReAuthRequest() {
         var existingCountOfIncorrectEmails = 1;
-        setupExistingEnterEmailAttemptsCountForIdentifier(
-                existingCountOfIncorrectEmails, TEST_SUBJECT_ID);
+        setupExistingEnterEmailAttemptsCountForIdentifier(existingCountOfIncorrectEmails);
 
         var result =
                 handler.handleRequestWithUserContext(
@@ -188,7 +201,7 @@ class CheckReAuthUserHandlerTest {
         when(authenticationService.getUserProfileByEmailMaybe(EMAIL_USED_TO_SIGN_IN))
                 .thenReturn(Optional.empty());
 
-        setupExistingEnterEmailAttemptsCountForIdentifier(1, TEST_RP_PAIRWISE_ID);
+        setupExistingEnterEmailAttemptsCountForIdentifier(1);
 
         var result =
                 handler.handleRequestWithUserContext(
@@ -211,10 +224,17 @@ class CheckReAuthUserHandlerTest {
 
     @Test
     void shouldReturn400WhenUserHasBeenBlockedForPasswordRetries() {
-        when(authenticationAttemptsService.getCountsByJourneyForIdentifiers(
-                        Arrays.asList(TEST_SUBJECT_ID, TEST_SUBJECT_ID, expectedRpPairwiseSub),
-                        JourneyType.REAUTHENTICATION))
-                .thenReturn(Map.of(CountType.ENTER_PASSWORD, MAX_RETRIES));
+        when(permissionDecisionManager.canReceiveEmailAddress(any(), any()))
+                .thenReturn(
+                        Result.success(
+                                new Decision.ReauthLockedOut(
+                                        ForbiddenReason
+                                                .EXCEEDED_INCORRECT_PASSWORD_SUBMISSION_LIMIT,
+                                        MAX_RETRIES,
+                                        null,
+                                        false,
+                                        Map.of(CountType.ENTER_PASSWORD, MAX_RETRIES),
+                                        List.of(CountType.ENTER_PASSWORD))));
 
         var result =
                 handler.handleRequestWithUserContext(
@@ -229,10 +249,16 @@ class CheckReAuthUserHandlerTest {
 
     @Test
     void shouldReturn400WhenUserHasBeenBlockedForMfaAttempts() {
-        when(authenticationAttemptsService.getCountsByJourneyForIdentifiers(
-                        Arrays.asList(TEST_SUBJECT_ID, TEST_SUBJECT_ID, expectedRpPairwiseSub),
-                        JourneyType.REAUTHENTICATION))
-                .thenReturn(Map.of(CountType.ENTER_MFA_CODE, MAX_RETRIES));
+        when(permissionDecisionManager.canReceiveEmailAddress(any(), any()))
+                .thenReturn(
+                        Result.success(
+                                new Decision.ReauthLockedOut(
+                                        ForbiddenReason.EXCEEDED_INCORRECT_MFA_OTP_SUBMISSION_LIMIT,
+                                        MAX_RETRIES,
+                                        null,
+                                        false,
+                                        Map.of(CountType.ENTER_MFA_CODE, MAX_RETRIES),
+                                        List.of(CountType.ENTER_MFA_CODE))));
 
         var result =
                 handler.handleRequestWithUserContext(
@@ -246,8 +272,27 @@ class CheckReAuthUserHandlerTest {
     }
 
     @Test
+    void shouldReturn500WhenPermissionDecisionManagerReturnsError() {
+        when(permissionDecisionManager.canReceiveEmailAddress(any(), any()))
+                .thenReturn(
+                        Result.failure(
+                                uk.gov.di.authentication.userpermissions.entity.DecisionError
+                                        .STORAGE_SERVICE_ERROR));
+
+        var result =
+                handler.handleRequestWithUserContext(
+                        API_REQUEST_EVENT_WITH_VALID_HEADERS,
+                        context,
+                        new CheckReauthUserRequest(EMAIL_USED_TO_SIGN_IN, expectedRpPairwiseSub),
+                        userContext);
+
+        assertEquals(500, result.getStatusCode());
+        assertThat(result, hasJsonBody(ErrorResponse.STORAGE_LAYER_ERROR));
+    }
+
+    @Test
     void shouldReturn404ForWhenUserDoesNotMatch() {
-        setupExistingEnterEmailAttemptsCountForIdentifier(3, TEST_RP_PAIRWISE_ID);
+        setupExistingEnterEmailAttemptsCountForIdentifier(3);
 
         var result =
                 handler.handleRequestWithUserContext(
@@ -271,7 +316,7 @@ class CheckReAuthUserHandlerTest {
 
     @Test
     void shouldIncludeTheUserSubjectIdForWhenUserDoesNotMatchButHasAccount() {
-        setupExistingEnterEmailAttemptsCountForIdentifier(3, TEST_RP_PAIRWISE_ID);
+        setupExistingEnterEmailAttemptsCountForIdentifier(3);
         when(authenticationService.getUserProfileByEmailMaybe(
                         DIFFERENT_EMAIL_USED_TO_REAUTHENTICATE))
                 .thenReturn(Optional.of(new UserProfile().withSubjectID(DIFFERENT_SUBJECT_ID)));
@@ -303,7 +348,7 @@ class CheckReAuthUserHandlerTest {
         when(authenticationService.getUserProfileByEmailMaybe(EMAIL_USED_TO_SIGN_IN))
                 .thenReturn(Optional.empty());
 
-        setupExistingEnterEmailAttemptsCountForIdentifier(1, TEST_RP_PAIRWISE_ID);
+        setupExistingEnterEmailAttemptsCountForIdentifier(1);
 
         when(authenticationService.getUserProfileByEmail(EMAIL_USED_TO_SIGN_IN)).thenReturn(null);
 
@@ -326,18 +371,14 @@ class CheckReAuthUserHandlerTest {
                         pair("user_supplied_email", EMAIL_USED_TO_SIGN_IN, true));
     }
 
-    private void setupExistingEnterEmailAttemptsCountForIdentifier(int count, String identifier) {
-        when(authenticationAttemptsService.getCount(
-                        identifier, JourneyType.REAUTHENTICATION, CountType.ENTER_EMAIL))
-                .thenReturn(count);
-        when(authenticationAttemptsService.getCountsByJourney(
-                        identifier, JourneyType.REAUTHENTICATION))
-                .thenReturn(Map.of(CountType.ENTER_EMAIL, count));
+    private void setupExistingEnterEmailAttemptsCountForIdentifier(int count) {
+        when(permissionDecisionManager.canReceiveEmailAddress(any(), any()))
+                .thenReturn(Result.success(new Decision.Permitted(count)));
     }
 
     @Test
-    void shouldIncrementLockoutCountWhenUserDoesNotMatch() {
-        setupExistingEnterEmailAttemptsCountForIdentifier(0, TEST_SUBJECT_ID);
+    void shouldRecordIncorrectEmailReceived() {
+        setupExistingEnterEmailAttemptsCountForIdentifier(0);
 
         handler.handleRequestWithUserContext(
                 API_REQUEST_EVENT_WITH_VALID_HEADERS,
@@ -345,12 +386,51 @@ class CheckReAuthUserHandlerTest {
                 new CheckReauthUserRequest(EMAIL_USED_TO_SIGN_IN, TEST_RP_PAIRWISE_ID),
                 userContext);
 
-        verify(authenticationAttemptsService)
-                .createOrIncrementCount(
-                        eq(TEST_SUBJECT_ID),
-                        anyLong(),
-                        eq(JourneyType.REAUTHENTICATION),
-                        eq(CountType.ENTER_EMAIL));
+        verify(userActionsManager)
+                .incorrectEmailAddressReceived(
+                        eq(JourneyType.REAUTHENTICATION), any(UserPermissionContext.class));
+    }
+
+    @Test
+    void shouldReturn500WhenIncorrectEmailTrackingFails() {
+        when(userActionsManager.incorrectEmailAddressReceived(any(), any()))
+                .thenReturn(Result.failure(TrackingError.STORAGE_SERVICE_ERROR));
+
+        var result =
+                handler.handleRequestWithUserContext(
+                        API_REQUEST_EVENT_WITH_VALID_HEADERS,
+                        context,
+                        new CheckReauthUserRequest(EMAIL_USED_TO_SIGN_IN, TEST_RP_PAIRWISE_ID),
+                        userContext);
+
+        assertEquals(500, result.getStatusCode());
+        assertThat(result, hasJsonBody(ErrorResponse.STORAGE_LAYER_ERROR));
+    }
+
+    @Test
+    void shouldReturn400WhenIncorrectEmailTriggersLockout() {
+        when(permissionDecisionManager.canReceiveEmailAddress(any(), any()))
+                .thenReturn(Result.success(new Decision.Permitted(MAX_RETRIES - 1)))
+                .thenReturn(
+                        Result.success(
+                                new Decision.ReauthLockedOut(
+                                        ForbiddenReason
+                                                .EXCEEDED_INCORRECT_EMAIL_ADDRESS_SUBMISSION_LIMIT,
+                                        MAX_RETRIES,
+                                        null,
+                                        false,
+                                        Map.of(CountType.ENTER_EMAIL, MAX_RETRIES),
+                                        List.of(CountType.ENTER_EMAIL))));
+
+        var result =
+                handler.handleRequestWithUserContext(
+                        API_REQUEST_EVENT_WITH_VALID_HEADERS,
+                        context,
+                        new CheckReauthUserRequest(EMAIL_USED_TO_SIGN_IN, TEST_RP_PAIRWISE_ID),
+                        userContext);
+
+        assertEquals(400, result.getStatusCode());
+        assertThat(result, hasJsonBody(ErrorResponse.TOO_MANY_INVALID_REAUTH_ATTEMPTS));
     }
 
     @TestFactory
@@ -405,7 +485,7 @@ class CheckReAuthUserHandlerTest {
             }
 
             void setupMocks(
-                    AuthenticationAttemptsService authenticationAttemptsService,
+                    PermissionDecisionManager permissionDecisionManager,
                     String expectedRpPairwiseSub) {
                 int testSubjectIdCount = 0;
                 int expectedRpPairwiseCount = 0;
@@ -418,45 +498,58 @@ class CheckReAuthUserHandlerTest {
                     case DIFFERENT_USER_PROFILE -> differentSubjectIdCount = MAX_RETRIES;
                 }
 
-                var mockCountSetups =
-                        List.of(
-                                Map.entry(TEST_SUBJECT_ID, testSubjectIdCount),
-                                Map.entry(expectedRpPairwiseSub, expectedRpPairwiseCount),
-                                Map.entry(DIFFERENT_SUBJECT_ID, differentSubjectIdCount));
-
-                for (var setup : mockCountSetups) {
-                    when(authenticationAttemptsService.getCount(
-                                    setup.getKey(),
-                                    JourneyType.REAUTHENTICATION,
-                                    CountType.ENTER_EMAIL))
-                            .thenReturn(setup.getValue());
-                }
+                record MockSetup(List<String> subjectIds, String rpPairwiseId, int count) {}
 
                 var mockCountsByJourneySetups =
-                        Map.of(
-                                Arrays.asList(null, null, expectedRpPairwiseSub),
-                                expectedRpPairwiseCount,
-                                Arrays.asList(
-                                        TEST_SUBJECT_ID, TEST_SUBJECT_ID, expectedRpPairwiseSub),
-                                testSubjectIdCount + expectedRpPairwiseCount,
-                                Arrays.asList(TEST_SUBJECT_ID, null, expectedRpPairwiseSub),
-                                testSubjectIdCount + expectedRpPairwiseCount,
-                                Arrays.asList(null, TEST_SUBJECT_ID, expectedRpPairwiseSub),
-                                testSubjectIdCount + expectedRpPairwiseCount,
-                                Arrays.asList(null, DIFFERENT_SUBJECT_ID, expectedRpPairwiseSub),
-                                differentSubjectIdCount + expectedRpPairwiseCount,
-                                Arrays.asList(
-                                        TEST_SUBJECT_ID,
-                                        DIFFERENT_SUBJECT_ID,
-                                        expectedRpPairwiseSub),
-                                testSubjectIdCount
-                                        + differentSubjectIdCount
-                                        + expectedRpPairwiseCount);
+                        List.of(
+                                new MockSetup(
+                                        Arrays.asList(null, null),
+                                        expectedRpPairwiseSub,
+                                        expectedRpPairwiseCount),
+                                new MockSetup(
+                                        Arrays.asList(TEST_SUBJECT_ID, TEST_SUBJECT_ID),
+                                        expectedRpPairwiseSub,
+                                        testSubjectIdCount + expectedRpPairwiseCount),
+                                new MockSetup(
+                                        Arrays.asList(TEST_SUBJECT_ID, null),
+                                        expectedRpPairwiseSub,
+                                        testSubjectIdCount + expectedRpPairwiseCount),
+                                new MockSetup(
+                                        Arrays.asList(null, TEST_SUBJECT_ID),
+                                        expectedRpPairwiseSub,
+                                        testSubjectIdCount + expectedRpPairwiseCount),
+                                new MockSetup(
+                                        Arrays.asList(null, DIFFERENT_SUBJECT_ID),
+                                        expectedRpPairwiseSub,
+                                        differentSubjectIdCount + expectedRpPairwiseCount),
+                                new MockSetup(
+                                        Arrays.asList(TEST_SUBJECT_ID, DIFFERENT_SUBJECT_ID),
+                                        expectedRpPairwiseSub,
+                                        testSubjectIdCount
+                                                + differentSubjectIdCount
+                                                + expectedRpPairwiseCount));
 
-                for (var setup : mockCountsByJourneySetups.entrySet()) {
-                    when(authenticationAttemptsService.getCountsByJourneyForIdentifiers(
-                                    setup.getKey(), JourneyType.REAUTHENTICATION))
-                            .thenReturn(Map.of(CountType.ENTER_EMAIL, setup.getValue()));
+                for (var setup : mockCountsByJourneySetups) {
+                    when(permissionDecisionManager.canReceiveEmailAddress(
+                                    JourneyType.REAUTHENTICATION,
+                                    UserPermissionContext.builder()
+                                            .withInternalSubjectIds(setup.subjectIds)
+                                            .withRpPairwiseId(setup.rpPairwiseId)
+                                            .build()))
+                            .thenReturn(
+                                    Result.success(
+                                            setup.count >= MAX_RETRIES
+                                                    ? new Decision.ReauthLockedOut(
+                                                            ForbiddenReason
+                                                                    .EXCEEDED_INCORRECT_EMAIL_ADDRESS_SUBMISSION_LIMIT,
+                                                            setup.count,
+                                                            Instant.now(),
+                                                            false,
+                                                            Map.of(
+                                                                    CountType.ENTER_EMAIL,
+                                                                    setup.count),
+                                                            List.of(CountType.ENTER_EMAIL))
+                                                    : new Decision.Permitted(setup.count)));
                 }
             }
         }
@@ -604,7 +697,7 @@ class CheckReAuthUserHandlerTest {
                                             .thenReturn(Optional.of(differentUserProfile));
 
                                     scenario.setupMocks(
-                                            authenticationAttemptsService, expectedRpPairwiseSub);
+                                            permissionDecisionManager, expectedRpPairwiseSub);
 
                                     var result =
                                             handler.handleRequestWithUserContext(
